NTI-6288 Fix alignment in transitions

--- a/src/layouts/carousel/View.scss
+++ b/src/layouts/carousel/View.scss
@@ -15,6 +15,8 @@
 	.carousel-transition-rotate-up-enter {
 		position: absolute;
 		top: 100%;
+		left: 0;
+		width: 100%;
 		opacity: 0;
 
 		&.carousel-transition-rotate-up-enter-active {
